# telegram-post-cli

./: README.md  pyproject.toml
src/telegram_post/: cli.py  config.py
src/tg/: cli.py  client.py
tests/: test_client.py  test_config.py
