[project]
name = "telegram-post-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.scripts]
telegram-post-cli = "telegram_post.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_post"]
